--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -20,6 +20,7 @@
           <td><%= f.airport %></td>
           <td><%= f.flightNo %></td>
           <td><%= f.departs %></td>
+          <td><a href="/flights/<%= f._id %>">Details</a></td>
         </tr>
       <% }) %>
     </tbody>
