--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -2,52 +2,48 @@
 <link rel="stylesheet" href="/stylesheets/movies/show.css" />
 <%- include('../partials/nav') %>
 
-<main>
-  <h1><%= title %></h1>
-  <section>
-    <div>Airline: </div>
-    <div><%= flight.airline %></div>
-    <div>Airport: </div>
-    <div><%= flight.airport %></div>
-    <div>Flight Number: </div>
-    <div><%= flight.flightNo %></div>
-    <div>Departure: </div>
-    <div><%= flight.departs%></div>
-  </section>
-  
-  <h3>Tickets</h3>
-  <form action="/flights/<%= flight._id %>/ticket" method="POST">
-    <label>Seat:
-    <input name="seat" required pattern="[A-F][1-9]\d?">
-    </label><br>
-    <label>Price:
-      <input type="number" name="price">
-    </label><br>
-    <button type="submit">Add Ticket</button>
-  </form>
-  <h4><a href="/flights/">Back to main</a></h4>
-  <% if (flight.tickets.length) { %> 
-  <table>
-    <thead>
-      <tr>
-        <th>Seat</th>
-        <th>Price</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% flight.tickets.forEach(function(ticket) { %>
+<section>
+  <div>Airport: </div>
+  <div><%= flight.airport %></div>
+  <div>Airline: </div>
+  <div><%= flight.airline %></div>
+  <div>flight number: </div>
+  <div><%= flight.flightNo %></div>
+  <div>Departs: </div>
+  <div><%= flight.departs %></div>
+</section>
+<br>
+<h2>Destination</h2>
+<form id="add-destination-form" method="POST" action="/flights/<%= flight._id %>/destinations">
+    <label>Destination: </label>
+    <select name="airport" >
+        <option value="AUS">AUS</option>
+        <option value="DFW">DFW</option>
+        <option value="DEN">DEN</option>
+        <option value="LAX">LAX</option>
+        <option value="SAN">SAN</option>
+    </select>
+    <input type="submit" value="Add Destination">
+</form>
+<% if (flight.destinations.length) { %>
+    <table>
+      <thead>
         <tr>
-          <td><%= ticket.seat %></td>
-          <td><%= ticket.price %></td>
+          <th>Destination</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% flight.destinations.forEach(function(d) { %>
+        <tr>
+          <td><%= d.airport %></td>
         </tr>
         <% }) %>
-    </tbody>
-  </table>
-<% } else { %> 
-  <h3>No Tickets Yet</h3>
-</body>
-</html>
-</main>
+      </tbody>
+    </table>
+    <% } else { %>
+    <h5>No Destinations Yet</h5>
+    <% } %>
+    <a href="/flights/<%= flight._id %>">New Ticket</a>
 
 
 
