update mongoose flights

--- a/views/destinations/new.ejs
+++ b/views/destinations/new.ejs
@@ -6,46 +6,13 @@
 <main>
   <h1><%= title %></h1>
   <section>
-    <div>Airline: </div>
-    <div><%= flight.airline %></div>
-    <div>Airport: </div>
-    <div><%= flight.airport %></div>
-    <div>Flight Number: </div>
-    <div><%= flight.flightNo %></div>
-    <div>Departure: </div>
-    <div><%= flight.departs%></div>
+    <div> 
+    <h1>Airport: <%= flight.airport %></h1>
+    <h1>Airline: <%= flight.airline %></h1>
+    <h1>Flight Number: <%= flight.flightNo %></h1>
+    <h1>Departs: <%= flight.departs %></h1>
+  </div>
   </section>
-  
-  <h3>Tickets</h3>
-  <form action="/flights/<%= flight._id %>/ticket" method="POST">
-    <label>Seat:
-    <input name="seat" required pattern="[A-F][1-9]\d?">
-    </label><br>
-    <label>Price:
-      <input type="number" name="price">
-    </label><br>
-    <button type="submit">Add Ticket</button>
-  </form>
-  <h4><a href="/flights/">Back to main</a></h4>
-  <% if (flight.tickets.length) { %> 
-  <table>
-    <thead>
-      <tr>
-        <th>Seat</th>
-        <th>Price</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% flight.tickets.forEach(function(ticket) { %>
-        <tr>
-          <td><%= ticket.seat %></td>
-          <td><%= ticket.price %></td>
-        </tr>
-        <% }) %>
-    </tbody>
-  </table>
-<% } else { %> 
-  <h3>No Tickets Yet</h3>
 
 <h3>Destination</h3>
 <section>
