--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -3,14 +3,14 @@
 <%- include('../partials/nav') %>
 
 <section>
-  <div>Airport: </div>
-  <div><%= flight.airport %></div>
-  <div>Airline: </div>
-  <div><%= flight.airline %></div>
-  <div>flight number: </div>
-  <div><%= flight.flightNo %></div>
-  <div>Departs: </div>
-  <div><%= flight.departs %></div>
+  <% flights.forEach(flight => { %> 
+  <div> 
+  <h1>Airport: <%= flight.airport %></h1>
+  <h1>Airline: <%= flight.airline %></h1>
+  <h1>Flight Number: <%= flight.flightNo %></h1>
+  <h1>Departs: <%= flight.departs %></h1>
+</div>
+<% }) %> 
 </section>
 <br>
 <h2>Destination</h2>
@@ -44,6 +44,37 @@
     <h5>No Destinations Yet</h5>
     <% } %>
     <a href="/flights/<%= flight._id %>">New Ticket</a>
+    
+    <h3>Tickets</h3>
+    <form action="/flights/<%= flight._id %>/ticket" method="POST">
+      <label>Seat:
+      <input name="seat" required pattern="[A-F][1-9]\d?">
+      </label><br>
+      <label>Price:
+        <input type="number" name="price">
+      </label><br>
+      <button type="submit">Add Ticket</button>
+    </form>
+    <h4><a href="/flights/">Back to main</a></h4>
+    <% if (flight.tickets.length) { %> 
+    <table>
+      <thead>
+        <tr>
+          <th>Seat</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% flight.tickets.forEach(function(ticket) { %>
+          <tr>
+            <td><%= ticket.seat %></td>
+            <td><%= ticket.price %></td>
+          </tr>
+          <% }) %>
+      </tbody>
+    </table>
+  <% } else { %> 
+    <h3>No Tickets Yet</h3>
 
 
 
